--- a/index.html
+++ b/index.html
@@ -4,29 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="1040421387294-d1ldq55cje0pf3ulr1tlr34gj4emkt2g.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    
 </head>
 <body>
-    <!--用戶一鍵Google登入或綁定Google帳戶時使用↓-->
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <script>
-      function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());
+    <fb:login-button scope="public_profile,email" autologoutlink="true" onlogin="checkLoginState();"></fb:login-button>
 
-        // // The ID token you need to pass to your backend:
-        // var id_token = googleUser.getAuthResponse().id_token;
-        // console.log("ID Token: " + id_token);
-      }
-    </script>
+目前狀態：<span id="FB_STATUS_1"></span>
+
+<script>
+window.fbAsyncInit = function() {
+    FB.init({
+        appId: '2559611937684469', // 填入 FB APP ID
+        cookie: true,
+        xfbml: true,
+        version: 'v7.0'
+    });
+    FB.AppEvents.logPageView()
+    FB.getLoginStatus(function(response) {
+        statusChangeCallback(response);
+    });
+};
+// 載入 FB SDK
+(function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0];
+if (d.getElementById(id)) return;
+js = d.createElement(s);
+js.id = id;
+js.src = "https://connect.facebook.net/zh_TW/sdk.js";
+fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+
+// 處理各種登入身份
+function statusChangeCallback(response) {
+console.log(response);
+var target = document.getElementById("FB_STATUS_1"),
+html = "";
+
+// 登入 FB 且已加入會員
+if (response.status === 'connected') {
+html = "已登入 FB，並加入 WFU BLOG DEMO 應用程式<br/>";
+
+FB.api('/me?fields=id,name,email', function(response) {
+console.log(response);
+html += "會員暱稱：" + response.name + "<br/>";
+html += "會員 email：" + response.email;
+target.innerHTML = html;
+});
+}
+
+// 登入 FB, 未偵測到加入會員
+else if (response.status === "not_authorized") {
+target.innerHTML = "已登入 FB，但未加入 WFU BLOG DEMO 應用程式";
+}
+
+// 未登入 FB
+else {
+target.innerHTML = "未登入 FB";
+}
+}
+
+
+</script>
    
 </body>
 </html>
