--- a/index.html
+++ b/index.html
@@ -13,26 +13,17 @@
 
 <script>
 window.fbAsyncInit = function() {
-    FB.init({
-        appId: '2559611937684469', // 填入 FB APP ID
-        cookie: true,
-        xfbml: true,
-        version: 'v7.0'
-    });
-    FB.AppEvents.logPageView()
-    FB.getLoginStatus(function(response) {
-        statusChangeCallback(response);
-    });
+FB.init({
+appId: '2559611937684469', // 填入 FB APP ID
+cookie: true,
+xfbml: true,
+version: 'v7.0'
+});
+FB.AppEvents.logPageView()
+FB.getLoginStatus(function(response) {
+statusChangeCallback(response);
+});
 };
-// 載入 FB SDK
-(function(d, s, id) {
-var js, fjs = d.getElementsByTagName(s)[0];
-if (d.getElementById(id)) return;
-js = d.createElement(s);
-js.id = id;
-js.src = "https://connect.facebook.net/zh_TW/sdk.js";
-fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
 
 // 處理各種登入身份
 function statusChangeCallback(response) {
@@ -63,7 +54,21 @@ target.innerHTML = "未登入 FB";
 }
 }
 
+function checkLoginState() {
+FB.getLoginStatus(function(response) {
+statusChangeCallback(response);
+});
+}
 
+// 載入 FB SDK
+(function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0];
+if (d.getElementById(id)) return;
+js = d.createElement(s);
+js.id = id;
+js.src = "https://connect.facebook.net/zh_TW/sdk.js";
+fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
 </script>
    
 </body>
